2003-05-07  Anders Carlsson  <andersca@codefactory.se>

	* modulesets/gnome24.modules: gtksourceview uses HEAD now

2003-05-05  Johan Dahlin  <jdahlin@async.com.br>

	* bootstrap.py: python seems to be confused about __file__ when 
	doing os.chdir(), save the absolute path before calling os.chdir().
	(Bootstrap.build): Use jhbuild_directory here.
	(Bootstrap.build): Use .endswith instead of slicing.
	(bootstraps): Simplify autoconf check
	(_boldcode, _normal): Use commands.getoutput() here.

2003-05-05  Johan Dahlin  <jdahlin@async.com.br>

	* module.py: Import check for xml.dom.minidom.
	refactor get_mozilla_ver and put it under __init__
	remove MozillaModule.do_install method, since it was on crack
	Use .endswith instead of slicing in a couple of places
	Add a few assertions
	Make list comprehensions more readable
	Strip text from raw_input()

2003-05-05  James Henstridge  <james@daa.com.au>

	* modulesets/gnome24.modules: linc now requires the gnome-common
	autogen.sh script, so mark it as a dependency (fixes bug #112205).

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome22.modules: Update XChat
	* modulesets/gnome24.modules: Same.

2003-04-23  James Henstridge  <james@daa.com.au>

	* jamesh.jhbuildrc (branches): set a custom branch to test things.

	* module.py (read_module_set): if a branch is listed in the
	branches dict, use it instead of the branch tag in the module set.

	* jhbuild.py (read_config_file): backward compat for 'cvsroot'
	setting was broken (key for gnome cvs is 'gnome.org'; not 'gnome').
	(default_config): add a branches dictionary.

	* jhbuild.py (do_update_one): add "jhbuild updateone" command
	(suggested by bug #109617).

	* modulesets/gnome24.modules: add evolution to this moduleset too.

	* modulesets/moduleset.xsl: update this too.

	* modulesets/moduleset.dtd: remove fcpackage element from DTD.

	* module.py (FcPackage): remove specialised fcpackage build rules.