@@ -1,3 +1,10 @@
+2003-05-08  Johan Dahlin  <jdahlin@async.com.br>
+
+	* module.py (MozillaModule): More fixes, most important, don't do
+	checkout mozilla/client.mk every time and don't run a full
+	checkout, if we already have checkout the tree, use fast-update 
+	instead.	
+
 2003-05-07  Anders Carlsson  <andersca@codefactory.se>
 
 	* modulesets/gnome24.modules: gtksourceview uses HEAD now
